charts/templates/network-policies/deny-app-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-app-egress
spec:
  podSelector:
    matchLabels:
      app: go-to-green-app
  policyTypes:
    - Egress
  egress:
    # Allow kube-dns only
    - to:
        - podSelector:
            matchLabels:
              k8s-app: kube-dns
          namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
      ports:
        - protocol: UDP
          port: 53
